<resources>
    <string name="app_name">MyCurriclum</string>
    <string name="account">账号：</string>
    <string name="password">密码：</string>
    <string name="login">登录</string>
    <string name="rememberPassword">记住密码</string>
    <string name="autoLogin">自动登录</string>
    <string name="CourseActivity">CourseActivity</string>
    <string name="MainActivity">MainActivity</string>
    <string name="logOff">注销</string>
    <string name="monday">一</string>
    <string name="tuesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>
    <string name="sunday">七</string>
    <string name="courseName">课程名称</string>
    <string name="courseNumber">课程编号</string>
    <string name="teacherName">任课教师</string>
    <string name="tel">联系电话</string>
    <string name="startWeek">开始周数</string>
    <string name="endWeek">结束周数</string>
    <string name="startClassNumber">开始节数</string>
    <string name="endClassNumber">结束节数</string>
    <string name="registerClass">查看方案</string>
    <string name="studentNumber">学生数</string>
    <string name="registerNewClass">申请新课程</string>
    <string name="queryClass">查询</string>
    <string name="settingTerm">设置学期信息</string>
    <string name="numberOfWeeks">设定本学期周数</string>
    <string name="saveNumberOfWeeks">保存本学期周数</string>
    <string name="setFestivals">设置放假日期</string>
    <string name="saveFestivals">保存放假日期</string>
    <string name="setTermArrangement">生成学期约课表</string>
</resources>
