<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.xty.helloagain.MyActivity.registerclassActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg">

    <com.example.xty.helloagain.MyView.ClearEditText
        android:id="@+id/courseName"
        android:hint="@string/courseName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:selectAllOnFocus="true"
        android:inputType="text"
        android:drawableRight="@drawable/delete_selector"
        android:textColorHighlight="#C0C0C0"
        android:completionThreshold="1"
        android:popupTheme="@style/Base.TextAppearance.AppCompat.Widget.PopupMenu.Header"/>
    <com.example.xty.helloagain.MyView.ClearEditText
        android:id="@+id/courseNumber"
        android:hint="@string/courseNumber"
        android:inputType="number"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:selectAllOnFocus="true"
        android:textColorHighlight="#C0C0C0"/>
    <com.example.xty.helloagain.MyView.ClearEditText
        android:id="@+id/teacherName"
        android:hint="@string/teacherName"
        android:inputType="text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:selectAllOnFocus="true"
        android:textColorHighlight="#C0C0C0"/>
    <com.example.xty.helloagain.MyView.ClearEditText
        android:id="@+id/tel"
        android:hint="@string/tel"
        android:inputType="number"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:selectAllOnFocus="true"
        android:textColorHighlight="#C0C0C0"/>
    <com.example.xty.helloagain.MyView.ClearEditText
        android:id="@+id/studentNumber"
        android:hint="@string/studentNumber"
        android:inputType="number"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:selectAllOnFocus="true"
        android:textColorHighlight="#C0C0C0"/>
    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/classWeekday"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:entries="@array/weekdays">
    </android.support.v7.widget.AppCompatSpinner>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:textSize="@dimen/text"
            android:text="@string/startWeek" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/startweekspinner"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_weight="70"></android.support.v7.widget.AppCompatSpinner>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:textSize="@dimen/text"
            android:text="@string/endWeek" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/endweekspinner"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_weight="70"></android.support.v7.widget.AppCompatSpinner>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:textSize="@dimen/text"
            android:text="@string/startClassNumber" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/startclassnumberspinner"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:entries="@array/classnumber"
            android:layout_weight="70"></android.support.v7.widget.AppCompatSpinner>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:textSize="@dimen/text"
            android:text="@string/endClassNumber" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/endclassnumberspinner"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:entries="@array/classnumber"
            android:layout_weight="70"></android.support.v7.widget.AppCompatSpinner>

    </LinearLayout>

    <Button
        android:id="@+id/registerClassButton"
        android:text="@string/registerClass"
        android:layout_width="250dp"
        android:textSize="16sp"
        android:paddingTop="50dp"
        android:textColor="#2a5caa"
        android:background="@drawable/button"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/selectedPlan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="30"
        android:textSize="@dimen/text"
    />

    <Button
        android:id="@+id/savePlan"
        android:text="@string/registerClass"
        android:layout_width="250dp"
        android:textSize="16sp"
        android:paddingTop="50dp"
        android:textColor="#2a5caa"
        android:background="@drawable/button"
        android:layout_height="wrap_content"
        />

</LinearLayout>
