<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.xty.helloagain.MyActivity.Navigation"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg">


    <Button
        android:id="@+id/registerNewClass"
        android:text="@string/registerNewClass"
        android:layout_width="250dp"
        android:textSize="16sp"
        android:textColor="#2a5caa"
        android:background="@drawable/button"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/queryClass"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/queryClass"
        android:textColor="#2a5caa"
        android:textSize="16sp" />
    <Button
    android:id="@+id/settingTerm"
    android:text="@string/settingTerm"
    android:layout_width="250dp"
    android:textSize="16sp"
    android:textColor="#2a5caa"
    android:background="@drawable/button"
    android:layout_height="wrap_content"
    />

</LinearLayout>
